collected/yamls/exp-7/1p1d-llama3-8b/llama3-8b-decoder-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: llama3-8b-decoder
  namespace: $LLMDBENCH_OPENSHIFT_NAMESPACE
  labels:
    app: llama3-8b-decoder
    llm-d.ai/inferenceServing: "true"
    llm-d.ai/model: "llama3-8b"
    llm-d.ai/role: "decode"
spec:
  imagePullSecrets:
    - name: $LLMDBENCH_QUAY_SECRET
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: nvidia.com/gpu.product
                operator: In
                values:
                  - $LLMDBENCH_GPU_MODEL
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - llama3-8b-prefiller
        topologyKey: kubernetes.io/hostname
  containers:
    - name: vllm
      image: quay.io/llm-d/llm-d-dev:vllm-nixl-0.0.6
      securityContext:
        allowPrivilegeEscalation: false
      args:
        - "--model"
        - "meta-llama/Llama-3.1-8B-Instruct"
        - "--port"
        - "8200"
        - "--enforce-eager"
        - "--kv-transfer-config"
        - '{"kv_connector":"NixlConnector","kv_role":"kv_both"}'
      ports:
        - containerPort: 5557
          protocol: TCP
      volumeMounts:
        - name: model-cache
          mountPath: /root/.cache/huggingface
      resources:
        limits:
          nvidia.com/gpu: 1
        requests:
          cpu: "16"
          memory: 40Gi
          nvidia.com/gpu: 1
  volumes:
    - name: model-cache
      persistentVolumeClaim:
        claimName: model-cache
  restartPolicy: Never
