collected/yamls/exp-7/1p1d-llama3-8b/llama3-8b-epp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama3-8b-epp
  namespace: $LLMDBENCH_OPENSHIFT_NAMESPACE
  labels:
    app: endpoint-picker
spec:
  selector:
    matchLabels:
      app: endpoint-picker
  template:
    metadata:
      labels:
        app: endpoint-picker
    spec:
      imagePullSecrets:
      - name: $LLMDBENCH_QUAY_SECRET
      containers:
        - args:
            - --poolName
            - llama3-8b
            - --poolNamespace
            - vllm-prod
            - -v
            - "4"
            - --zap-encoder
            - json
            - --grpcPort
            - "9002"
            - --grpcHealthPort
            - "9003"
          image: quay.io/llm-d/llm-d-inference-scheduler:0.0.1
          # image: quay.io/llm-d/llm-d-gateway-api-inference-extension-dev:0.0.5-amd64
          imagePullPolicy: Always
          name: epp
          ports:
            - containerPort: 9002
              protocol: TCP
            - containerPort: 9003
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
