collected/yamls/exp-7/1p1d-llama3-8b/inference-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway
  namespace: $LLMDBENCH_OPENSHIFT_NAMESPACE
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: inference-gateway-params
  listeners:
  - name: default
    port: 80
    protocol: HTTP
