collected/yamls/exp-7/1p1d-llama3-8b/inference-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-route
  namespace: $LLMDBENCH_OPENSHIFT_NAMESPACE
spec:
  parentRefs:
  - name: inference-gateway
  rules:
  - backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: llama3-8b
      port: 8000
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      request: 30s
